--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Site de Planejamento Alimentar",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +16,8 @@
     "mssql": "^10.0.2",
     "nodemon": "^3.1.0",
     "sequelize": "^6.37.1"
+  },
+  "directories": {
+    "doc": "docs"
   }
 }
